--- a/index.html
+++ b/index.html
@@ -1,12 +1,27 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <style>  body {
+      background-color: lightblue;
+    }
+    div {
+      width: 700px;
+      max-width: auto;
+      font-family: Helvetica Neue;
+      background: white;
+      padding: 30px;
+    }
+    </style>
+  
     <meta charset="utf-8">
     <title>Introduction to CSS Lab</title>
     <!-- Your code here! -->
+  
   </head>
-
+  <link rel="stylesheet" href="./style.css" />
+  
   <body>
+   
 
     <div>
       <h1 id='main-header'>How Does Writing CSS Differ From Writing HTML?</h1>
